--- a/certifcates.html
+++ b/certifcates.html
@@ -41,12 +41,12 @@
 				<div class="portfolio-items-wrappers">
 
 					<div class="portofolio-item-wrappers">	
-						<div class="portfolio-image-background" style="background-image:url(C:\Users\omara\Desktop\Notes\Python\Webdevelopment\Portfolio Omar's Website\images\Udemy Certificate A.jpg) alt="Udemy Certificate A"> 
+						<div class="portfolio-image-background" style="background-image:url(#) alt="#"> 
 						</div>
 
 						<div class="img-text-wrappers">
 							<div class="logo-wrappers">
-								<img src="C:\Users\omara\Desktop\Notes\Python\Webdevelopment\Portfolio Omar's Website\images\Udemy Certificate A.jpg" alt="Udemy Python Certificate Confirmation" width ="350px" height="350px "class="UdemyPythonCertifcate-Responsive">
+								<img src="images\Udemy Certificate A.jpg" alt="Udemy Python Certificate Confirmation" width ="350px" height="350px "class="UdemyPythonCertifcate-Responsive">
 							</div>
 							<a href="https://www.udemy.com/certificate/UC-ZA24664P/?utm_campaign=email&utm_source=sendgrid.com&utm_medium=email"
 
@@ -60,13 +60,12 @@
 								<div class="portfolio-items-wrappers">
 
 									<div class="portfolio-item-wrappers">	
-										<div class="portofolio-image-background" style="background-image:url(C:\Users\omara\Desktop\Notes\Python\Webdevelopment\Portfolio Omar's Website\images\Freecodecamp-webdevelopment-Certificate.JPG) alt="				
-										Freecodecamp-webdevelopment-Certificate."> 
+										<div class="portofolio-image-background" style="background-image:url(images\Freecodecamp-webdevelopment-Certificate.JPG) alt="				Freecodecamp-webdevelopment-Certificate."> 
 									</div>
 
 									<div class="img-text-wrappers">
 										<div class="logo-wrappers">
-											<img src="C:\Users\omara\Desktop\Notes\Python\Webdevelopment\Portfolio Omar's Website\images\Freecodecamp-webdevelopment-Certificate.JPG" width="350px" height="350px" alt="FreeCodeCamp Web Design Certificate" class="FCC-Certificate-Responsive">
+											<img src="images\Freecodecamp-webdevelopment-Certificate.JPG" width="350px" height="350px" alt="FreeCodeCamp Web Design Certificate" class="FCC-Certificate-Responsive">
 										</div>
 										<a href="https://www.freecodecamp.org/certification/omarashrafzeinhom/responsive-web-design">
 
@@ -83,12 +82,12 @@
 									<div class="portfolio-items-wrappers">
 
 										<div class="portfolio-item-wrappers">	
-											<div class="portfolio-image-background" style="background-image:url(C:\Users\omara\Desktop\Notes\Python\Webdevelopment\Portfolio Omar's Website\images\CFI Certificate.JPG) alt="CFI Certificate"> 
+											<div class="portfolio-image-background" style="background-image:url(images\CFI Certificate.JPG) alt="CFI Certificate"> 
 											</div>
 											<div class ="CFI-Certificate-Responsive-Certificates">
 												<div class="img-text-wrappers">
 													<div class="logo-wrappers">
-														<img src="C:\Users\omara\Desktop\Notes\Python\Webdevelopment\Portfolio Omar's Website\images\CFI Certificate.JPG" height="350px" width ="350px" alt="CFI Accounting Fundmental Certificate" 
+														<img src="images\CFI Certificate.JPG" height="350px" width ="350px" alt="CFI Accounting Fundmental Certificate" 
 														class="CFI-Certificate-Responsive">
 													</div>
 													<a href="https://www.credential.net/53138c68-982f-44cb-95ea-59ff406b9993">
