--- a/about.html
+++ b/about.html
@@ -46,7 +46,6 @@
 
 						<div class="img-text-wrappers">
 							<div class="logo-wrappers">
-								<img src="" alt="">
 							</div>
 
 							<div class="subtitle">
@@ -131,23 +130,24 @@ Including my tasks at Vodafone  was recording notes for all my phone calls recei
 </article>
 <br/> 
 
-<p title="Portfolio"> Omar AbdElRahman <br/>  
-Summary Profile. </p>
+<p title="Portofolio"> Omar AbdElRahman <br/>  
+						Summary Profile. </p>
 
-<img src="C:\Users\omara\Desktop\Notes\Python\Webdevelopment\Portfolio Omar's Website\images\profilepic.jpg" alt="Profile-Picture" width ="170" height="170">
-<br/> 
-<br/> 
-<article>
-Phone Number : +201063197635 </br>
-</br>
-Email-Address : omarzeinhom@protonmail.com
-</article>
+						<img src="images\profilepic.jpg" alt="ProfilePicture" width ="170" height="170">
 
-<a href="https://github.com/OmarAshrafZeinhom" > GithHub </a><br/> 
+					</br>
+					<div class="nav-links-wrapper">
+					<a href="https://github.com/OmarAshrafZeinhom" > Git-Hub > </a> </br>
+					<a href="https://www.linkedin.com/in/omar-abdelrahman-7602a9126/"> </br> Linked In </a>
+				</br>
+				<article>
+				Phone Number : +201063197635 </br>
+			</br>
+			Email-Address : omarzeinhom@protonmail.com
+		</article>
 
 
-<a href="https://www.linkedin.com/in/omar-abdelrahman-7602a9126/"> </br>
-Linked In </a>
+
 
 
 
