--- a/certifcates.html
+++ b/certifcates.html
@@ -43,54 +43,53 @@
 					<div class="portofolio-item-wrappers">	
 						<div class="portfolio-image-background" style="background-image:url(#) alt="#"> 
 						</div>
+						<h1> 
+							<div class="Bottom-Header-Text-About">
+								Earned Online Certificates.
+							</div>
+						</h1>
 
 						<div class="img-text-wrappers">
 							<div class="logo-wrappers">
-								<img src="images\Udemy Certificate A.jpg" alt="Udemy Python Certificate Confirmation" width ="350px" height="350px "class="UdemyPythonCertifcate-Responsive">
-							</div>
-							<a href="https://www.udemy.com/certificate/UC-ZA24664P/?utm_campaign=email&utm_source=sendgrid.com&utm_medium=email"
+								<a href="https://www.udemy.com/certificate/UC-ZA24664P/?utm_campaign=email&utm_source=sendgrid.com&utm_medium=email">
 
-							<div class="subtitle">
-								Udemy Certificate Confirmation
-							</div>
-
-
-
-							<div class="content-wrappers">
-								<div class="portfolio-items-wrappers">
-
-									<div class="portfolio-item-wrappers">	
-										<div class="portofolio-image-background" style="background-image:url(images\Freecodecamp-webdevelopment-Certificate.JPG) alt="				Freecodecamp-webdevelopment-Certificate."> 
+									<img src="images\Udemy Certificate A.jpg" alt="Udemy Python Certificate Confirmation" width ="3550px" height="350px "class="UdemyPythonCertifcate-Responsive">
+								</div>
+								<a href="https://www.udemy.com/certificate/UC-ZA24664P/?utm_campaign=email&utm_source=sendgrid.com&utm_medium=email">
+									<div class="nav-links-wrapper">	
+										<div class="subtitle">
+											Udemy Certificate Confirmation
+										</div>
 									</div>
+
 
 									<div class="img-text-wrappers">
 										<div class="logo-wrappers">
-											<img src="images\Freecodecamp-webdevelopment-Certificate.JPG" width="350px" height="350px" alt="FreeCodeCamp Web Design Certificate" class="FCC-Certificate-Responsive">
-										</div>
-										<a href="https://www.freecodecamp.org/certification/omarashrafzeinhom/responsive-web-design">
+											<a href="https://www.freecodecamp.org/certification/omarashrafzeinhom/responsive-web-design">
 
-											<div class="subtitle">
-												WebDesign Certificate Confirmation
+												<img src="images\Freecodecamp-webdevelopment-Certificate.JPG" width="350px" height="350px" alt="FreeCodeCamp Web Design Certificate" class="FCC-Certificate-Responsive">
 											</div>
-
-										</div>	
-									</div>
-								</div>
-
-
-								<div class="content-wrappers">
-									<div class="portfolio-items-wrappers">
-
-										<div class="portfolio-item-wrappers">	
-											<div class="portfolio-image-background" style="background-image:url(images\CFI Certificate.JPG) alt="CFI Certificate"> 
-											</div>
-											<div class ="CFI-Certificate-Responsive-Certificates">
-												<div class="img-text-wrappers">
-													<div class="logo-wrappers">
-														<img src="images\CFI Certificate.JPG" height="350px" width ="350px" alt="CFI Accounting Fundmental Certificate" 
-														class="CFI-Certificate-Responsive">
+											<a href="https://www.freecodecamp.org/certification/omarashrafzeinhom/responsive-web-design">
+												<div class="nav-links-wrapper">
+													<div class="subtitle">
+														WebDesign Certificate Confirmation
 													</div>
-													<a href="https://www.credential.net/53138c68-982f-44cb-95ea-59ff406b9993">
+												</div>
+
+											</div>	
+										</div>
+
+
+
+										<div class="img-text-wrappers">
+											<div class="logo-wrappers">
+												<div class ="CFI-Certificate-Responsive-Certificates">
+													
+													<img src="images\CFI Certificate.JPG" height="350px" width ="350px" alt="CFI Accounting Fundmental Certificate" 
+													class="CFI-Certificate-Responsive">
+												</div>
+												<a href="https://www.credential.net/53138c68-982f-44cb-95ea-59ff406b9993">
+													<div class="nav-links-wrapper">
 														<div class="subtitle">
 															CFI Accounting Fundmentals Confirmation
 														</div>	</a>
@@ -107,11 +106,7 @@
 
 
 
-						<h1> 
-							<div class="Bottom-Header-Text-About">
-								Earned Online Certificates Thus Far & More on my Linked In Profile
-							</div>
-						</h1>
+						
 
 						<p title="Portofolio"> Omar AbdElRahman <br/>  
 						Summary Profile. </p>
@@ -119,7 +114,8 @@
 						<img src="images\profilepic.jpg" alt="ProfilePicture" width ="170" height="170">
 
 					</br>
-					<a href="https://github.com/OmarAshrafZeinhom" > GithHub > </a> </br>
+					<div class="nav-links-wrapper">
+					<a href="https://github.com/OmarAshrafZeinhom" > Git-Hub > </a> </br>
 					<a href="https://www.linkedin.com/in/omar-abdelrahman-7602a9126/"> </br> Linked In </a>
 				</br>
 				<article>
