--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</div>
 
 			<div class="nav-links-wrapper">
-				<a href="about.html">About</a>
+				<a href="about.html">ABOUT</a>
 			</div>
 		</div>	
 		<div class="right-side">
@@ -36,24 +36,24 @@
 		<div class="portfolio-items-wrappers">
 
 			<div class="portfolio-item-wrappers">	
-				<div class="background-image" style="background-image:url(\Portfolio Omar's Website\images\Background-img.jpg)> 
+				<div class="background-image" style="background-image:url(images\Background-img.jpg)"> 
 
-				<div class="img-text-wrappers">
-					<div class="logo-wrappers">
-						<img src="images\Background-img.jpg" alt="Background-img." class="Background-img-Responsive ">
+					<div class="img-text-wrappers">
+						<div class="logo-wrappers">
+							<img src="images\Background-img.jpg" alt="Background-img." class="Background-img-Responsive" width="425" height="425">
+						</div>
+
+						<div class="subtitle">
+							This website was built for Development Purposes
+						</div>
 					</div>
 
-					<div class="subtitle">
-						This website was built for Development Purposes
-					</div>
-				</div>
 
-				
 
-			</div>	
+				</div>	
+			</div>
 		</div>
 	</div>
-</div>
 </div>
 
 
@@ -66,20 +66,23 @@
 </h1>
 
 <p title="Portofolio"> Omar AbdElRahman <br/>  
-Summary Profile. </p>
-<img src="images\profilepic.jpg"  alt="Profile Picture Avatar" width ="170" height="170" class="ProfilePic-Avatar-responsive">
+						Summary Profile. </p>
+
+						<img src="images\profilepic.jpg" alt="ProfilePicture" width ="170" height="170">
+
+					</br>
+					<div class="nav-links-wrapper">
+					<a href="https://github.com/OmarAshrafZeinhom" > Git-Hub > </a> </br>
+					<a href="https://www.linkedin.com/in/omar-abdelrahman-7602a9126/"> </br> Linked In </a>
+				</br>
+				<article>
+				Phone Number : +201063197635 </br>
+			</br>
+			Email-Address : omarzeinhom@protonmail.com
+		</article>
 
 
 
-</br>
-<a href="https://github.com/OmarAshrafZeinhom" > GithHub > </a> </br>
-<a href="https://www.linkedin.com/in/omar-abdelrahman-7602a9126/"> </br> Linked In </a>
-
-<article>
-Phone Number : +201063197635 </br>
-</br>
-Email-Address : omarzeinhom@protonmail.com
-</article>
 
 
 
