--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="styles.css">	
 </head>
 <body>
-	<div class ="About-Body-Class">
+	
 		<div class="container">
 			<div class="nav-wrapper">
 				<div class="left-side">
@@ -36,7 +36,14 @@
 					</div>
 				</div>
 			</div>
-
+<div class="about-flipping-box">
+	<div>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+	</div>
+</div>
 			<div class="content-wrappers">
 				<div class="portofolio-items-wrappers">
 
@@ -131,20 +138,24 @@ Including my tasks at Vodafone  was recording notes for all my phone calls recei
 <br/> 
 
 <p title="Portofolio"> Omar AbdElRahman <br/>  
-						Summary Profile. </p>
+Summary Profile. </p>
 
-						<img src="images\profilepic.jpg" alt="ProfilePicture" width ="170" height="170">
+<img class="ProfilePicAvatar-class"src="images\profilepic.jpg" alt="ProfilePicture" width ="170" height="170">
 
-					</br>
-					<div class="nav-links-wrapper">
-					<a href="https://github.com/OmarAshrafZeinhom" > Git-Hub > </a> </br>
-					<a href="https://www.linkedin.com/in/omar-abdelrahman-7602a9126/"> </br> Linked In </a>
-				</br>
-				<article>
-				Phone Number : +201063197635 </br>
-			</br>
-			Email-Address : omarzeinhom@protonmail.com
-		</article>
+</br>
+<div class="nav-links-wrapper">
+	<a href="https://github.com/OmarAshrafZeinhom" > Git-Hub  </a> 
+</br>
+</br>
+	<div class="nav-links-wrapper">
+	<a href="https://www.linkedin.com/in/omar-abdelrahman-7602a9126/"> </br> Linked In </a>
+</br>
+<p>
+Phone Number : +201063197635 </br>
+</p>
+<p>
+Email-Address : omarzeinhom@protonmail.com
+</p>
 
 
 
