--- a/certifcates.html
+++ b/certifcates.html
@@ -9,7 +9,14 @@
 	
 </head>
 <body>
-	<div class="Certificates-Body-Class">
+	<div class="certificates-flipping-box">
+	<div>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+	</div>
+</div>	
 		<div class="container">
 			<div class="nav-wrapper">
 				<div class="left-side">
@@ -109,20 +116,24 @@
 						
 
 						<p title="Portofolio"> Omar AbdElRahman <br/>  
-						Summary Profile. </p>
+Summary Profile. </p>
 
-						<img src="images\profilepic.jpg" alt="ProfilePicture" width ="170" height="170">
+<img class="ProfilePicAvatar-class"src="images\profilepic.jpg" alt="ProfilePicture" width ="170" height="170">
 
-					</br>
-					<div class="nav-links-wrapper">
-					<a href="https://github.com/OmarAshrafZeinhom" > Git-Hub > </a> </br>
-					<a href="https://www.linkedin.com/in/omar-abdelrahman-7602a9126/"> </br> Linked In </a>
-				</br>
-				<article>
-				Phone Number : +201063197635 </br>
-			</br>
-			Email-Address : omarzeinhom@protonmail.com
-		</article>
+</br>
+<div class="nav-links-wrapper">
+	<a href="https://github.com/OmarAshrafZeinhom" > Git-Hub  </a> 
+</br>
+</br>
+	<div class="nav-links-wrapper">
+	<a href="https://www.linkedin.com/in/omar-abdelrahman-7602a9126/"> </br> Linked In </a>
+</br>
+<p>
+Phone Number : +201063197635 </br>
+</p>
+<p>
+Email-Address : omarzeinhom@protonmail.com
+</p>
 
 
 
