--- a/index.html
+++ b/index.html
@@ -1,92 +1,73 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
-
 <head>
+
 	<meta charset="utf-8"> 
 	<meta name ="viewport" content="width=device-width", inital-scale=1.0>
 	<title>Omar Ashraf Zeinhom Portfolio </title>	
-	<link rel="stylesheet" href="styles.css">		
+	<link rel="stylesheet" type="text/css "href="styles.css">	
+	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,500" rel="stylesheet">	
 </head>
 <body>
-	<div class="container">
+	<div class="background-options">
+		
+	</div>
+
+
+
+<div class="container">
 		<div class="nav-wrapper">
 			<div class="left-side">
 				<div class="nav-links-wrapper">
 					<a href="index.html">Home</a>
 				</div>	
-
-				<div class="nav-links-wrapper">
-					<a href="certifcates.html">Certifcates</a>
-				</div>
-			</div>
-
-			<div class="nav-links-wrapper">
-				<a href="about.html">ABOUT</a>
-			</div>
-		</div>	
-		<div class="right-side">
-			<div class = "branding-links">
-				<div>OMAR ABDELRAHMAN</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="content-wrappers">
-		<div class="portfolio-items-wrappers">
-
-			<div class="portfolio-item-wrappers">	
-				<div class="background-image" style="background-image:url(images\Background-img.jpg)"> 
-
-					<div class="img-text-wrappers">
-						<div class="logo-wrappers">
-							<img src="images\Background-img.jpg" alt="Background-img." class="Background-img-Responsive" width="425" height="425">
-						</div>
-
-						<div class="subtitle">
-							This website was built for Development Purposes
+				<div class="left-side">
+					<div class="nav-links-wrapper">
+						<a href="certifcates.html">Certifcates</a>
+						<div class="left-side">
+							<div class="nav-links-wrapper">
+								<a href="about.html">About</a>
+							</div>
 						</div>
 					</div>
-
-
-
-				</div>	
-			</div>
+				</div>
+</div> 
 		</div>
+
+			</div> 
+
+<div class="flipping-box">
+	<div>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
 	</div>
-</div>
+</div>	
 
-
-
-
-<h1> 
-	<div class="Header-Text">
-		Portfolio Website by Omar Ashraf Zeinhom
-	</div>
-</h1>
 
 <p title="Portofolio"> Omar AbdElRahman <br/>  
-						Summary Profile. </p>
+Summary Profile. </p>
 
-						<img src="images\profilepic.jpg" alt="ProfilePicture" width ="170" height="170">
+<img class="ProfilePicAvatar-class"src="images\profilepic.jpg" alt="ProfilePicture" width ="170" height="170">
 
-					</br>
-					<div class="nav-links-wrapper">
-					<a href="https://github.com/OmarAshrafZeinhom" > Git-Hub > </a> </br>
-					<a href="https://www.linkedin.com/in/omar-abdelrahman-7602a9126/"> </br> Linked In </a>
-				</br>
-				<article>
-				Phone Number : +201063197635 </br>
-			</br>
-			Email-Address : omarzeinhom@protonmail.com
-		</article>
-
-
-
+</br>
+<div class="nav-links-wrapper">
+	<a href="https://github.com/OmarAshrafZeinhom" > Git-Hub  </a> 
+</br>
+</br>
+	<div class="nav-links-wrapper">
+	<a href="https://www.linkedin.com/in/omar-abdelrahman-7602a9126/"> </br> Linked In </a>
+</br>
+<p>
+Phone Number : +201063197635 </br>
+</p>
+<p>
+Email-Address : omarzeinhom@protonmail.com
+</p>
 
 
 
 
 </body>
-
 </html>
