--- a/certifcates.html
+++ b/certifcates.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8"> 
 	<meta name ="viewport" content="width=device-width", inital-scale=1.0>	
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://fonts.googleapis.com/css?family=Chivo:300,700|Playfair+Display:700i" rel="styles.css">	
 	
 </head>
 <body>
@@ -33,29 +34,14 @@
 					</div>
 
 					
-
-				</div>
-
-				
-				<div class="right-side">
-					<div class = "branding-links">
-						<div>OMAR ABDELRAHMAN</div>
-					</div>
-				</div>
+	</div>
+		</div>
 			</div>
 
 			<div class="content-wrappers">
 				<div class="portfolio-items-wrappers">
 
 					<div class="portofolio-item-wrappers">	
-						<div class="portfolio-image-background" style="background-image:url(#) alt="#"> 
-						</div>
-						<h1> 
-							<div class="Bottom-Header-Text-About">
-								Earned Online Certificates.
-							</div>
-						</h1>
-
 						<div class="img-text-wrappers">
 							<div class="logo-wrappers">
 								<a href="https://www.udemy.com/certificate/UC-ZA24664P/?utm_campaign=email&utm_source=sendgrid.com&utm_medium=email">
