--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<meta name ="viewport" content="width=device-width", inital-scale=1.0>
 	<title>Omar Ashraf Zeinhom Portfolio </title>	
 	<link rel="stylesheet" type="text/css "href="styles.css">	
-	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,500" rel="stylesheet">	
+	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,500" rel="styles.css">
+	<link href="https://fonts.googleapis.com/css?family=Chivo:300,700|Playfair+Display:700i" rel="styles.css">	
 </head>
 <body>
 	<div class="background-options">
@@ -24,8 +25,8 @@
 				<div class="left-side">
 					<div class="nav-links-wrapper">
 						<a href="certifcates.html">Certifcates</a>
-						<div class="left-side">
 							<div class="nav-links-wrapper">
+								<div class="left-side">
 								<a href="about.html">About</a>
 							</div>
 						</div>
@@ -35,16 +36,27 @@
 		</div>
 
 			</div> 
-
-<div class="flipping-box">
-	<div>
-		<span></span>
-		<span></span>
-		<span></span>
-		<span></span>
-	</div>
-</div>	
-
+<div class= 'container'>
+<div class="container_content">
+<div class="container_content_inner">
+<div class="title">
+  <h1>Summary</h1>
+</div>
+<div class="par">
+<p>
+An eager-learning indivdual who's currently an Undergraduate in my 3rd Year , I am Currently studying Economics at The Modern Sciences & Arts University
+Located in 6th of October . 
+</p>
+</div>
+<div class="btns">
+<button class='btns_more'> See more on LinkedIn</button>
+<a href="https://www.linkedin.com/in/omar-abdelrahman-7602a9126/"></a>
+</div>
+</div>
+</div>
+ <div class="container_outer_img">
+ <div class="img-inner">
+ 
 
 <p title="Portofolio"> Omar AbdElRahman <br/>  
 Summary Profile. </p>
