--- a/about.html
+++ b/about.html
@@ -6,7 +6,9 @@
 	<title>About</title>
 	<meta charset="utf-8"> 
 	<meta name ="viewport" content="width=device-width", inital-scale=1.0>	
-	<link rel="stylesheet" href="styles.css">	
+	<link rel="stylesheet" href="styles.css">
+	<link href="https://fonts.googleapis.com/css?family=Chivo:300,700|Playfair+Display:700i" rel="styles.css">	
+	
 </head>
 <body>
 	
@@ -25,17 +27,10 @@
 						<a href="about.html">About</a>
 					</div>
 
-
-
-				</div>
-
-				
-				<div class="right-side">
-					<div class = "branding-links">
-						<div>OMAR ABDELRAHMAN</div>
-					</div>
-				</div>
+		</div>
 			</div>
+				</div>		
+				
 <div class="about-flipping-box">
 	<div>
 		<span></span>
@@ -44,31 +39,6 @@
 		<span></span>
 	</div>
 </div>
-			<div class="content-wrappers">
-				<div class="portofolio-items-wrappers">
-
-					<div class="portofolio-items-wrappers">	
-						<div class="portofolio-image-background" style="background-image:url(\images\portofolio-image-AB.jpg) alt="Building-Image-A"> 
-						</div>
-
-						<div class="img-text-wrappers">
-							<div class="logo-wrappers">
-							</div>
-
-							<div class="subtitle">
-								About
-							</div>
-
-
-						</div>	
-					</div>
-				</div>
-
-			</div>
-		</div>
-
-
-
 
 
 		<h1> 
@@ -77,7 +47,7 @@
 			</div>
 		</h1>
 
-		<article >
+		<article>
 			<div class ="Entry-Text-About">
 			An eager-learning indivdual who's currently an Undergraduate in my 3rd Year , I am Currently studying Economics at The Modern Sciences &  Arts University </br>
 		Located in 6th of October .</br> 
