--- a/about.html
+++ b/about.html
@@ -11,47 +11,53 @@
 	
 </head>
 <body>
+
+	<!-- Navigation Bar -->
 	
-		<div class="container">
-			<div class="nav-wrapper">
-				<div class="left-side">
-					<div class="nav-links-wrapper">
-						<a href="index.html">Home</a>
-					</div>	
+	<div class="container">
+		<div class="nav-wrapper">
+			<div class="left-side">
+				<div class="nav-links-wrapper">
+					<a href="index.html">Home</a>
+				</div>	
 
-					<div class="nav-links-wrapper">
-						<a href="certifcates.html">Certificates</a>
-					</div>
+				<div class="nav-links-wrapper">
+					<a href="certifcates.html">Certificates</a>
+				</div>
 
-					<div class="nav-links-wrapper">
-						<a href="about.html">About</a>
-					</div>
+				<div class="nav-links-wrapper">
+					<a href="about.html">About</a>
+				</div>
 
+			</div>
 		</div>
-			</div>
-				</div>		
-				
-<div class="about-flipping-box">
-	<div>
-		<span></span>
-		<span></span>
-		<span></span>
-		<span></span>
+	</div>		
+	
+	<!-- Flipping-Box-About -->
+
+	<div class="about-flipping-box">
+		<div>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
 	</div>
-</div>
 
 
-		<h1> 
-			<div class="Header-Text">
-				About Me
-			</div>
-		</h1>
+	<h1> 
+		<div class="About-Header-Texts">
+			About Me
+		</div>
+	</h1>
 
-		<article>
-			<div class ="Entry-Text-About">
-			An eager-learning indivdual who's currently an Undergraduate in my 3rd Year , I am Currently studying Economics at The Modern Sciences &  Arts University </br>
-		Located in 6th of October .</br> 
-	</br>
+
+	<!-- About-Text -->
+	<article>
+		<div class ="Entry-Text-About">
+		An eager-learning indivdual who's currently an Undergraduate in my 3rd Year , I am Currently studying Economics at The Modern Sciences &  Arts University </br>
+	Located in 6th of October .</br> 
+</br>
 </br>
 However i am really interested in the Computer Science Field.Specifically Web Design &</br>
 Ethical Hacking in regards to web pentration testing and network pentration testing </br>
@@ -93,19 +99,13 @@ My Tasks there were handling & solving the customers queries , explaining the cu
 Including my tasks at Vodafone  was recording notes for all my phone calls received using the Oracle Siebel CRM </br>software as well as Microsoft office tools as Microsoft office & Microsoft Outlook</br> </p4>
 
 
-
-
-
-
-
-
-
-
-
 </ol>
 
 </article>
 <br/> 
+
+
+<!-- Avatar-Summary -->
 
 <p title="Portofolio"> Omar AbdElRahman <br/>  
 Summary Profile. </p>
@@ -117,14 +117,14 @@ Summary Profile. </p>
 	<a href="https://github.com/OmarAshrafZeinhom" > Git-Hub  </a> 
 </br>
 </br>
-	<div class="nav-links-wrapper">
+<div class="nav-links-wrapper">
 	<a href="https://www.linkedin.com/in/omar-abdelrahman-7602a9126/"> </br> Linked In </a>
 </br>
 <p>
 Phone Number : +201063197635 </br>
 </p>
 <p>
-Email-Address : omarzeinhom@protonmail.com
+	Email-Address : omarzeinhom@protonmail.com
 </p>
 
 
