--- a/index.html
+++ b/index.html
@@ -15,68 +15,74 @@
 	</div>
 
 
+	<!-- Navigation Bar -->
 
-<div class="container">
+
+	<div class="container">
 		<div class="nav-wrapper">
 			<div class="left-side">
 				<div class="nav-links-wrapper">
 					<a href="index.html">Home</a>
 				</div>	
-				<div class="left-side">
-					<div class="nav-links-wrapper">
-						<a href="certifcates.html">Certifcates</a>
-							<div class="nav-links-wrapper">
-								<div class="left-side">
-								<a href="about.html">About</a>
-							</div>
-						</div>
-					</div>
+				<div class="nav-links-wrapper">
+					<a href="certifcates.html">Certificates</a>
 				</div>
-</div> 
+
+				<div class="nav-links-wrapper">
+					<a href="about.html">About</a>
+				</div>
+			</div> 
 		</div>
 
-			</div> 
-<div class= 'container'>
-<div class="container_content">
-<div class="container_content_inner">
-<div class="title">
-  <h1>Summary</h1>
-</div>
-<div class="par">
-<p>
-An eager-learning indivdual who's currently an Undergraduate in my 3rd Year , I am Currently studying Economics at The Modern Sciences & Arts University
-Located in 6th of October . 
-</p>
-</div>
-<div class="btns">
-<button class='btns_more'> See more on LinkedIn</button>
-<a href="https://www.linkedin.com/in/omar-abdelrahman-7602a9126/"></a>
-</div>
-</div>
-</div>
- <div class="container_outer_img">
- <div class="img-inner">
- 
+	</div> 
+	<div class= 'container'>
+		<div class="container_content">
+			<div class="container_content_inner">
+				<div class="title">
 
-<p title="Portofolio"> Omar AbdElRahman <br/>  
-Summary Profile. </p>
 
-<img class="ProfilePicAvatar-class"src="images\profilepic.jpg" alt="ProfilePicture" width ="170" height="170">
+					<!-- Summary -->
 
-</br>
-<div class="nav-links-wrapper">
-	<a href="https://github.com/OmarAshrafZeinhom" > Git-Hub  </a> 
-</br>
-</br>
-	<div class="nav-links-wrapper">
-	<a href="https://www.linkedin.com/in/omar-abdelrahman-7602a9126/"> </br> Linked In </a>
-</br>
-<p>
-Phone Number : +201063197635 </br>
-</p>
-<p>
-Email-Address : omarzeinhom@protonmail.com
-</p>
+					<h1>Summary</h1>
+				</div>
+				<div class="par">
+					<p>
+						An eager-learning indivdual who's currently an Undergraduate in my 3rd Year , I am Currently studying Economics at The Modern Sciences & Arts University
+						Located in 6th of October . 
+					</p>
+				</div>
+				<div class="btns">
+					<button class='btns_more'> See more on LinkedIn</button>
+					<a href="https://www.linkedin.com/in/omar-abdelrahman-7602a9126/"></a>
+				</div>
+			</div>
+		</div>
+		<div class="container_outer_img">
+			<div class="img-inner">
+				
+
+
+				<!-- Avatar-Summary -->
+
+				<p title="Portofolio"> Omar AbdElRahman <br/>  
+				Summary Profile. </p>
+
+				<img class="ProfilePicAvatar-class"src="images\profilepic.jpg" alt="ProfilePicture" width ="170" height="170">
+
+			</br>
+			<div class="nav-links-wrapper">
+				<a href="https://github.com/OmarAshrafZeinhom" > Git-Hub  </a> 
+			</br>
+		</br>
+		<div class="nav-links-wrapper">
+			<a href="https://www.linkedin.com/in/omar-abdelrahman-7602a9126/"> </br> Linked In </a>
+		</br>
+		<p>
+		Phone Number : +201063197635 </br>
+	</p>
+	<p>
+		Email-Address : omarzeinhom@protonmail.com
+	</p>
 
 
 
